src/test/ui/marker_trait_attr/marker-trait-with-associated-items.stderr
error[E0714]: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:16:5
   |
LL |     const N: usize;
   |     ^^^^^^^^^^^^^^^

error[E0714]: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:22:5
   |
LL |     type Output;
   |     ^^^^^^^^^^^^

error[E0714]: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:28:5
   |
LL |     fn foo();
   |     ^^^^^^^^^

error[E0714]: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:34:5
   |
LL |     const N: usize = 43;
   |     ^^^^^^^^^^^^^^^^^^^^

error[E0714]: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:40:5
   |
LL |     type Output = ();
   |     ^^^^^^^^^^^^^^^^^

error[E0714]: marker traits cannot have associated items
  --> $DIR/marker-trait-with-associated-items.rs:46:5
   |
LL |     fn foo() {}
   |     ^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0714`.
